Version 5.4:
1) better tests
2) test module moved in different package
3) old tests refactor as parametric_tests

Version 5.3:
1)several optimizations and fixes
2)rename EclException in EclError

Version 5.3 is not backward compatible

Version 5.2:
ECDSA parametric hash function

Version 5.1:
1)ElGamal and ECDSA new OOP design
2)Various fix

Version 5.1 is not backward compatible

Version 5.0:
1)ECDSA algorithm
2Performance improvements
3)Various fix

Version 5.0 is not backward compatible

Version 4.2:
Performance improvements.

Version 4.1:
1) koblitz’s algorithm now support all prime number

Version 4.0:
1) hexadecimal encode for std_curves
2) new test module: automatic test for arithmetic, representation and built-in algorithm
3) new package organization: the most important features are directly accessible from ECL namespace
4) new package public interface: import* import only essential names
5) immutability for Curve and Point: methods that change the state are now protected, members are now private with read-only property
6) type annotation

Version 4 is not backward compatible