@@ -1,7 +1,9 @@
 Version 5.4:
 1) better tests
 2) test module moved in different package
-3) old tests refactor as parametric_tests
+3) old tests refactored as parametric_tests
+4) ElGamal and ECDSA now support private key creation and resume from user's secret number
+5) bug fixes
 
 Version 5.3:
 1)several optimizations and fixes
